Fix typo in readme

--- a/html/index.html
+++ b/html/index.html
@@ -103,7 +103,7 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 <p><a href="https://theonlyzac.github.io/sly1"><img src="logo.png" alt="" style="margin:7px" align="right" width="33%" class="inline"/></a></p>
 <p>This is a work-in-progress decompilation of <a href="https://en.wikipedia.org/wiki/Sly_Cooper_and_the_Thievius_Raccoonus"><em>Sly Cooper and the Thievius Raccoonus</em></a> for the PlayStation 2. It is based on the NTSC-U version of the game (<code>SCUS-971.98</code>).</p>
 <p>The goal of this project is to better understand how the game works. This repo does not contain any game assets or code from the game's executable.</p>
-<p>Documenation of the code can be found at <a href="https://theonlyzac.github.io/sly1">theonlyzac.github.io/sly1</a>. For further reading on the game's internal structures and mechanics, go to the <a href="https://slymods.info">SlyMods Wiki</a>.</p>
+<p>Documentation of the code can be found at <a href="https://theonlyzac.github.io/sly1">theonlyzac.github.io/sly1</a>. For further reading on the game's internal structures and mechanics, go to the <a href="https://slymods.info">SlyMods Wiki</a>.</p>
 <p>New contributors are welcome and encouraged to make a pull request! If you would like to help but aren't sure where to begin, check out CONTRIBUTING.md and feel free to <a href="https://discord.gg/2GSXcEzPJA">join our Discord server</a> for guidance.</p>
 <h1><a class="anchor" id="autotoc_md1"></a>
 Building</h1>
